--- a/src/css/colorfulTab.css
+++ b/src/css/colorfulTab.css
@@ -89,7 +89,7 @@
       font-family: "Montserrat";
       font-weight: 800;
       letter-spacing: 0.05em;
-      color: #0ce3ec;
+      color: #fff;
       text-align: center;
       padding: 20px 0;
       font-size: 18px;
@@ -155,7 +155,7 @@
     .colorful-tab-wrapper.flatline .colorful-tab-menu-item.active a {
       background: none;
       opacity: 1;
-      box-shadow: 0 -2px 0 #0ce3ec inset; }
+      box-shadow: 0 -2px 0 #fff inset; }
 
 /*@media (max-width: 767px) {
   .colorful-tab-menu {
