--- a/src/scss/pageKnowledge/_pageKnowledge.scss
+++ b/src/scss/pageKnowledge/_pageKnowledge.scss
@@ -1,21 +1,285 @@
 #kn_wrapper{
+	// padding-bottom: 200px;
 	.kn_content{
 		color: #fff;
 		width: 100%;
 		font-size: 16px;
 
+
 		.kn_posts{
 			width: 100%;
 
-			li{
+			.kn-p{
 				width: 45%;
-				padding: 20px;
+				padding: 20px 25px;
+				// float: left;
+				background-color: rgba(0,0,0,.5);
+				margin-bottom: 100px;
+				box-shadow: 10px 10px 2px rgba(255,255,255,.5);
+				border: 1px solid #000;
+				letter-spacing: 0.2em;
+
+				a{
+					color: $white;
+
+					&:hover{
+						color: #333;
+					}
+				}
+
+				
+
+				h3{
+					font-size: 20px;
+					padding-bottom: 20px;
+					margin-bottom: 20px;
+					// border-bottom: 5px solid #555;
+					font-weight: 600;
+					text-shadow:1px 1px 1px #000;
+					display: block;
+					width: 100%;
+					position: relative;
+
+
+					&:after{
+						content: '';
+						width: 15%;
+						// height: 5px;
+						border: 2px solid #555;
+						position: absolute;
+						bottom: 0;
+						left: 0;
+					}
+
+					
+				}
+
+				&:hover h3:after{
+						width: 100%;
+						transition:1s all;
+					}
+
+				.text{
+					color: rgba(255,255,255,.8);
+					font-weight: 500;
+				}
+
+				&:hover{
+					background-color: $white;
+					border:#fff;
+					color: #333;
+					text-shadow:0px 0px 1px #000;
+					// box-shadow: -10px -10px 0px #000;
+					// transition:1s box-shadow;
+
+					.text{
+						color: #333;
+					}
+
+					a{
+						color: #333;
+					}
+				}
+			}
+			.kn-p:nth-child(odd){
 				float: left;
+				margin-top: 20px;
+				box-shadow: -10px 10px 2px rgba(255,255,255,.5);
 			}
 
 			.kn-p:nth-child(even){
 				float: right;
+				margin-top: 100px;
 			}
+		}
+	}
+
+	.kn_one_post{
+		background-color: rgba(51, 51, 51, .5);
+		color: $white;
+		letter-spacing: 0.2em;
+		// margin-bottom: 100px;
+		padding-bottom: 150px;
+		padding-top: 150px;
+		width: 100%;
+
+		.content{
+			padding: 30px;
+			width: 80%;
+			margin: auto;
+			text-align: center;
+		}
+		.fa-times{
+			font-size: 20px;
+			color: #fff;
+			// border: 1px solid #fff;
+			padding: 5px;
+			border-radius: 50%;
+			float: right;
+
+
+		}
+		h3{
+			font-size: 22px;
+			font-weight: 800;
+			padding-bottom:20px;
+			padding-top:20px;
+			border-bottom: 1px solid #fff;
+			text-align: center; 
+			margin-top: 50px;
+		}
+
+		.post-info{
+			font-size: 16px;
+			font-weight: 500;
+			position: relative;
+			display: inline-block;
+			padding-top: 10px;
+			padding-bottom: 10px;
+			color: rgba(255,255,255,.7);
+			font-weight: 500;
+			padding: 15px;
+			float: left;
+
+			
+			span{
+				// padding-right: 10px;
+				&:nth-child(2){
+					// color: #000;
+					padding-left: 10px;
+				}
+			}
+
+			&:after{
+				content: '';
+				height: 10px;
+				width: 0;
+				border: 1px solid rgba(255,255,255,.7);
+				position: absolute;
+				left: -13px;
+				bottom: 0;
+				right: 0;
+				top: 0;
+				margin: auto;
+			}
+
+		}
+
+		.social-icon{
+			font-size: 16px;
+			font-weight: 800;
+			position: relative;
+			display: inline-block;
+			padding-top: 10px;
+			padding-bottom: 10px;
+			color: rgba(255,255,255,.7);
+			font-weight: 500;
+			padding: 15px;
+			float: right;
+			// font-family: Arial;
+
+			.fa{
+				margin-left: 10px;
+			}
+		}
+
+		.main{
+			
+			padding: 20px 50px;
+			border-top:1px solid #fff; 
+			
+			p{
+				font-size: 16px;
+				color: $white;
+				letter-spacing: 0.2em;
+				text-align: justify;
+				line-height: 1.5em;
+				margin-bottom: 30px;
+			}
+
+			img{
+				margin-bottom: 30px;
+				width: 100%;
+			}
+		}
+		.kn-comment{
+			margin-top: 50px;
+			padding-top: 10px;
+			// padding-bottom: 10px;
+			
+			border-top: 2px solid rgba(255,255,255,.5);
+			.kn-title{
+				width: 100%;
+				border-bottom: 2px solid rgba(255,255,255,.5);
+				h4{
+					display: inline-block;
+					padding-bottom: 8px;
+					float: left;
+					border-bottom: 0px;
+					vertical-align: middle;
+					font-size:18px;
+					padding-left: 10px;
+					padding-right: 10px;
+					border-bottom: 2px solid $light-blue;
+				}
+				span{
+					float: right;
+					display: inline-block;
+					vertical-align: middle;
+					font-size: 16px;
+					padding-bottom: 8px;
+					padding-right: 20px;
+					font-weight: 900;
+					
+					a{
+						color: #eee;
+					}
+
+					.fa{
+						margin-left: 5px;
+						color: #ccc;
+					}
+				}
+			}
+
+			.comment-box{
+				width: 100%;
+				height: 50px;
+				margin-top: 30px;
+
+				.comment-user{
+					display: inline-block;
+					width: 50px;
+					height: 50px;
+					vertical-align: middle;
+					border-radius: 5px;
+					
+					.fa{
+						width: 100%;
+						height: 100%;
+						border: 1px solid #666;
+						// padding: 10px;
+						font-size: 50px;
+						background-color: #666;
+						line-height: 50px;
+						
+					}
+				}
+				textarea{
+					display: inline-block;
+					height: 50px;
+					width: 80%;
+					vertical-align: middle;
+					border: 1px solid #ddd;
+					border-radius: 2px;
+					font-size: 20px;
+					padding: 10px;
+					
+				}
+
+			}
+
+		
 		}
 	}
 		
