--- a/src/scss/pageKnowledge/_xs.scss
+++ b/src/scss/pageKnowledge/_xs.scss
@@ -1,13 +1,62 @@
 @include respones(xs) {
 	//在此輸入內容
+#kn_wrapper{
 
+	.kn_content{
+		.kn_posts{
+			.kn-p{
+				width: 95%;
+				padding: 10px;
+				margin-bottom: 20px;
+				box-shadow: 2px 2px 1px rgba(255,255,255,.5);
+				// box-shadow: -2px -2px 2px rgba(255,255,255,.5);
+				margin: auto;
 
+				
 
+				h3{
 
+					font-size: 18px;
+					padding-bottom: 10px;
+					margin-bottom: 10px;
+					border-bottom: 3px solid rgba(255,255,255,.6);
+					font-weight: 600;
+					text-shadow:1px 1px 1px #000;
+				}
 
+				
+			}
+			.kn-p:nth-child(odd){
+				float: none;
+				// box-shadow: 0px 0px 0px rgba(255,255,255,.5);
+				box-shadow: 2px 2px 1px rgba(255,255,255,.5);
+			}
+			.kn-p:nth-child(even){
+				float: none;
+				margin-top: 20px;
+			}
+		}
+	}
 
+	.kn_one_post{
+		.content{
+			padding: 0px;
+			width: 100%;
+		}
 
+		.post-info, .social-icon{
+			float: none;
+			display: block;
+		}
 
+		.main{
+			padding: 15px 5px;
 
+			img{
+				width: 90%;
+			}
+		}
+	}
+}
 
 }
