--- a/src/scss/pageMember/_pageMember.scss
+++ b/src/scss/pageMember/_pageMember.scss
@@ -479,19 +479,21 @@
 					font-size: 16px;
 
 					button{
-						width: 45px;
+						width: 50px;
 						height: 30px;
 						border-radius: 5px;
-						border: 1px solid steelblue;
+						border: 1px solid #86d4f5;
 						background-color: rgba(0,0,0,0);
-						color: steelblue;
+						color: #86d4f5;
 						text-shadow:1px 1px 1px #000;
 						box-shadow: 1px 1px 1px #333;
+						font-size: 14px;
+						font-weight: 900;
 						// float: right;
 						// margin-left: 10px;
 
 						&:hover{
-							background-color: steelblue;
+							background-color: #86d4f5;
 							color: $white;
 							box-shadow: 0px 0px 0px #000;
 						}
@@ -560,19 +562,21 @@
 					top: 20px;
 
 					button{
-						width: 45px;
+						width: 50px;
 						height: 30px;
 						border-radius: 5px;
-						border: 1px solid steelblue;
+						border: 1px solid #86d4f5;
 						background-color: rgba(0,0,0,0);
-						color: steelblue;
+						color: #86d4f5;
 						text-shadow:1px 1px 1px #000;
 						box-shadow: 1px 1px 1px #333;
+						font-size: 14px;
+						font-weight: 900;
 						// float: right;
 						// margin-left: 10px;
 
 						&:hover{
-							background-color: steelblue;
+							background-color: #86d4f5;
 							color: $white;
 							box-shadow: 0px 0px 0px #000;
 						}
