--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,10 +1,11 @@
-footer{
-	width: 100%;
-	height: 50px;
-	background-color: $grey;
-	color:#fff;
-	text-align: right;
-	padding-right:40px;
-	line-height: 50px;
-	font-size: 14px;
+footer {
+    width: 100%;
+    height: 70px;
+    background-color: #020202;
+    color: #fff;
+    text-align: right;
+    padding-right: 40px;
+    line-height: 70px;
+    font-size: 15px;
+    letter-spacing: 0.2em;
 }
