--- a/src/scss/layout/_nav.scss
+++ b/src/scss/layout/_nav.scss
@@ -2,7 +2,8 @@
 #nav {
     height: 80px;
     width: 100%;
-    background-color: $o-black;
+    background: linear-gradient(to right, #0c3458 0%, rgba(29, 34, 60,.8) 40%, rgba(21, 22, 31, 0.7) 80%);
+		box-shadow: 1px 1px 30px #000;
     position: fixed;
     top: 0;
     left: 0;
@@ -61,4 +62,5 @@
 #navButtonHidden {
     position: absolute;
     left: 0px;
+    display: none;
 }
