--- a/src/scss/pageActivity/pageBranch/_addACT.scss
+++ b/src/scss/pageActivity/pageBranch/_addACT.scss
@@ -468,28 +468,28 @@
 	z-index: 50;
 }
 .a-add-mainCover{
-	background-color: rgba(255,255,255,0.2);
+	// background-color: rgba(255,255,255,0.2);
 	position: absolute;
 			  top: 10%;
 			  bottom: 0;
 			  left: 0;
 			  right: 0;
 			  margin: auto;
-	width: 1170px;
-	height: 70%;
+	width: 60%;
+	height: 60%;
 	&:before{
 		content: '';
 		display: block;
 		width: 110%;	
-		height: 120%;	
+		height: 130%;	
 		position: absolute;
 				  top: 0;
 				  bottom: 0;
 				  left: -5%;
 				  right: 0;
 				  margin: auto;	
-		border-top:1px solid rgba(255,255,255,0.5);
-		border-bottom:1px solid rgba(255,255,255,0.5);
+		border-top:2px solid rgba(255,255,255,0.5);
+		border-bottom:2px solid rgba(255,255,255,0.5);
 		
 	}
 
@@ -557,13 +557,13 @@
 	z-index: 20;
 	width: 100%;	
 	position: absolute;
-	top: -13.5%;	
+	top: -18.5%;	
 }
 .a-add-dot li{
 	position: relative;	
 	top: 0;	
-	width: 30px;
-	height: 30px;
+	width: 25px;
+	height: 25px;
 	background-color: #fff;
 	border-radius: 50%;
 	display: inline-block;
@@ -704,8 +704,8 @@
 	&:before{
 		content: '';
 		display: block;
-		height: 333px;
-		width: 1px;
+		height: 303px;
+		width: 2px;
 		position: absolute;
 					  bottom: 90px;
 					  left: 1px;
@@ -716,8 +716,8 @@
 	&:after{
 		content: '';
 		display: block;
-		height: 333px;
-		width: 1px;
+		height: 303px;
+		width: 2px;
 		position: absolute;
 					  top: 90px;
 					  left: 1px;
@@ -739,8 +739,8 @@
 	&:before{
 		content: '';
 		display: block;
-		height: 333px;
-		width: 1px;
+		height: 303px;
+		width: 2px;
 		position: absolute;
 					  bottom: 90px;
 					  left: 0px;
@@ -751,8 +751,8 @@
 	&:after{
 		content: '';
 		display: block;
-		height: 333px;
-		width: 1px;
+		height: 303px;
+		width: 2px;
 		position: absolute;
 					  top: 90px;
 					  left: 0px;
