--- a/src/scss/pageActivity/pageBranch/_addACT.scss
+++ b/src/scss/pageActivity/pageBranch/_addACT.scss
@@ -47,7 +47,7 @@
 
 
 .a-add-put{
-	margin-top: 11%;	
+	margin-top: 10%;	
 	position: relative;
 	width: 90%;
 	height: 82%;
@@ -271,7 +271,7 @@
 }
 .a-add-class{
 	// background-color: #ccc;
-	margin: 70px 0px 0px 20px;	
+	margin: 40px 0px 0px 20px;	
 	cursor:pointer;
 	position: relative;
 	margin-bottom: 20px;
@@ -351,7 +351,7 @@
 	// padding-bottom: 10px;
 	font-size: $fz-h2;
 	position: absolute;
-	bottom: -90px;
+	bottom: -100px;
 	left: 0;
 	right: 0;	
 	color:#FFC889;
@@ -368,7 +368,7 @@
 	}
 }
 #a-add-dark{
-	margin: 90px 0px 0 80px;
+	margin: 50px 0px 0 80px;
 	box-shadow: 0px 0px 20px #ccc;	
 }
 .a-add-google{
@@ -492,6 +492,20 @@
 		border-bottom:2px solid rgba(255,255,255,0.5);
 		
 	}
+	&:after{
+		content: '';
+		z-index: -1;
+		display: block;
+		width: 110%;	
+		height: 130%;
+		position: absolute;
+				  top: 0;
+				  bottom: 0;
+				  left: -5%;
+				  right: 0;
+				  margin: auto;	
+		background-color: rgba(0,0,0,0.2);
+	}
 
 }
 .a-add-main{
@@ -511,7 +525,7 @@
 
 }
 .a-add-page{
-
+	top:5%;
 	width:600%;
 	height: 100%;
 	/*background-color: #fa0;*/
@@ -676,9 +690,7 @@
 	border:1px solid rgba(255,255,255,0.8);
 	z-index: 10;
 	cursor: pointer;
-	&:hover{
-		background-color: #E88D00;
-	}
+	
 	i{
 		z-index: 5;
 		width: 30px;	
@@ -697,9 +709,16 @@
 			  bottom: 0;
 			  left: -7.2%;
 			  margin: auto;
+	&:hover{
+		background-color: #E88D00;
+		i{
+			color:#FFC889;
+		}
+	}
 	i{
 		left: -5px;
 		right: 0;
+		color:#E88D00;
 	}
 	&:before{
 		content: '';
@@ -730,6 +749,13 @@
 	i{
 		right: -5px;
 		left: 0;
+		color:#E88D00;
+	}
+	&:hover{
+		background-color: #E88D00;
+		i{
+			color:#FFC889;
+		}
 	}
 	position: absolute;
 			  top: 0;
